# Python-Module-08

ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  oracle.py
