[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "IIAydedeII",email = "ahmetyasindd@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests (==2.34.2)",
    "certifi (==2026.6.17)",
    "charset-normalizer (==3.4.9)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "fonttools (==4.63.0)",
    "idna (==3.18)",
    "kiwisolver (==1.5.0)",
    "matplotlib (==3.11.0)",
    "numpy (==2.5.0)",
    "packaging (==26.2)",
    "pandas (==3.0.3)",
    "pillow (==12.3.0)",
    "pyparsing (==3.3.2)",
    "python-dateutil (==2.9.0.post0)",
    "six (==1.17.0)",
    "urllib3 (==2.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
