[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "IIAydedeII",email = "ahmetyasindd@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
