[project]
name = "ex1"
version = "0.1.0"
description = "Managing dependencies carefully to avoid conflicts"
authors = [
    {name = "IIAydedeII",email = "ahmetyasindd@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.34.2)",
    "matplotlib (<3.11.0)",
    "pandas (<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
